fix bug scrollbar in list channels and messages

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -83,6 +83,7 @@ mat-card-header {
     max-height: 200px;
     box-sizing: border-box;
     overflow-y: auto;
+    line-height: normal;
 }
 
 .direct-message {
